# soul-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: ov.conf  soul.json
docs/plans/: 2026-02-25-phase4-implementation.md  2026-02-25-phase4-pipeline-design.md
mem_agent/: __init__.py  cli.py  mcp_server.py  service.py
mem_agent/core/: config.py  engine.py  llm.py  queue.py
mem_agent/hooks/: claude_code_hook.sh  quick_note.sh  zsh_hook.sh
mem_agent/modules/: abstract.py  browser.py  classifier.py  claude_code.py  clipboard.py  compact.py  daily_log.py  filewatcher.py  input_hook.py  insight.py  janitor.py  lifecycle.py  note.py  pipeline.py  recall.py  terminal.py  todo.py
soul_agent/: __init__.py  cli.py  mcp_server.py  service.py
soul_agent/core/: config.py  frontmatter.py  llm.py  vault.py
soul_agent/hooks/: claude_code_hook.sh  quick_note.sh  zsh_hook.sh
soul_agent/launchd/: com.soul-agent.daemon.plist
soul_agent/modules/: classifier.py  claude_code.py  clipboard.py  compact.py  daily_log.py  filewatcher.py  input_hook.py  insight.py  memory.py  note.py  pipeline.py  recall.py  soul.py  terminal.py  todo.py
tests/: test_abstract.py  test_basic.py  test_browser.py  test_classifier.py  test_claude_code.py  test_cli_routing.py  test_compact.py  test_daily_log.py  test_filewatcher.py  test_frontmatter.py  test_input_hook.py  test_input_sources.py  test_insight.py  test_janitor.py  test_lifecycle.py  test_llm.py  test_mcp_server.py  test_memory.py  test_pipeline.py  test_queue.py  test_soul.py  test_todo_activity.py
