[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-agent"
version = "0.2.0"
description = "Personal digital soul — captures, classifies, and reflects on daily activity"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "watchdog>=4.0.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "mcp>=1.0.0",
]

[project.scripts]
soul = "soul_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["soul_agent"]
